# c_stringfn

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.toml  README.md  build.sh  post-example-build.cmake  uncrustify.cfg
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml
examples/: example.c
include/: stringfn.h
src/: stringfn.c
tests/: test.c  test.h  test_clone_or_null_with_null.c  test_clone_or_null_with_value.c  test_concat_all_strings.c  test_concat_null.c  test_concat_partial_range.c  test_concat_partial_range_with_null.c  test_ends_with_both_empty.c  test_ends_with_equal.c  test_ends_with_false.c  test_ends_with_string_empty.c  test_ends_with_string_null.c  test_ends_with_suffix_empty.c  test_ends_with_suffix_null.c  test_ends_with_true.c  test_equal_both_null.c  test_equal_diff.c  test_equal_first_null.c  test_equal_same.c  test_equal_second_null.c  test_format_empty.c  test_format_no_args.c  test_format_null.c  test_format_with_args.c  test_is_ascii_all_ascii.c  test_is_ascii_empty.c  test_is_ascii_null.c  test_is_digits_all_digits.c  test_is_digits_empty.c  test_is_digits_mixed.c  test_is_digits_null.c  test_is_whitespace.c  test_join_null.c  test_join_null_separator.c  test_join_partial_range_and_separator.c  test_join_partial_range_with_null_and_separator.c  test_join_with_separator.c  test_mut_replace_mixed.c  test_mut_replace_null.c  (+104 more)
